--- a/index.html
+++ b/index.html
@@ -130,30 +130,30 @@
 			</div>
 
 			<div id="Events" class="imageStyle">
-				<img src="events/eve1.jpg">
-				<img src="events/eve2.jpg">
-				<img src="events/eve3.jpg">
-				<img src="events/eve4.jpg">
-				<img src="events/eve5.jpg">
-				<img src="events/eve6.jpg">
-				<img src="events/eve7.jpg">
-				<img src="events/eve8.jpg">
-				<img src="events/eve9.jpg">
-				<img src="events/eve10.jpg">
-				<img src="events/eve11.jpg">
-				<img src="events/eve12.jpg">
+				<img id="eve1" src="events/eve1.jpg">
+				<img id="eve2" src="events/eve2.jpg">
+				<img id="eve3" src="events/eve3.jpg">
+				<img id="eve4" src="events/eve4.jpg">
+				<img id="eve5" src="events/eve5.jpg">
+				<img id="eve6" src="events/eve6.jpg">
+				<img id="eve7" src="events/eve7.jpg">
+				<img id="eve8" src="events/eve8.jpg">
+				<img id="eve9" src="events/eve9.jpg">
+				<img id="eve10" src="events/eve10.jpg">
+				<img id="eve11" src="events/eve11.jpg">
+				<img id="eve12" src="events/eve12.jpg">
 			</div>
 
 			<div id="Everyday" class="imageStyle">
-				<img src="everyday/ed1.jpg">
-				<img src="everyday/ed2.jpg">
-				<img src="everyday/ed3.jpg">
-				<img src="everyday/ed4.jpg">
-				<img src="everyday/ed5.jpg">
-				<img src="everyday/ed6.jpg">
-				<img src="everyday/ed7.jpg">
-				<img src="everyday/ed8.jpg">
-				<img src="everyday/ed9.jpg">
+				<img id="ed1" src="everyday/ed1.jpg">
+				<img id="ed2" src="everyday/ed2.jpg">
+				<img id="ed3" src="everyday/ed3.jpg">
+				<img id="ed4" src="everyday/ed4.jpg">
+				<img id="ed5" src="everyday/ed5.jpg">
+				<img id="ed6" src="everyday/ed6.jpg">
+				<img id="ed7" src="everyday/ed7.jpg">
+				<img id="ed8" src="everyday/ed8.jpg">
+				<img id="ed9" src="everyday/ed9.jpg">
 			</div>
 		</div>
 
@@ -268,6 +268,119 @@
 				</div>
 			</div>
 		</div>
+
+
+		<div class="landModals" align="center">
+			<div id="eve1Modal" class="modal">
+				<div class="modal-content">
+					<span id="eve1Span"></span><img src="events/eve1.jpg">
+				</div>
+			</div>
+			<div id="eve2Modal" class="modal">
+				<div class="modal-content">
+					<span id="eve2Span"></span><img src="events/eve2.jpg">
+				</div>
+			</div>
+			<div id="eve3Modal" class="modal">
+				<div class="modal-content">
+					<span id="eve3Span"></span><img src="events/eve3.jpg">
+				</div>
+			</div>
+			<div id="eve4Modal" class="modal">
+				<div class="modal-content">
+					<span id="eve4Span"></span><img src="events/eve4.jpg">
+				</div>
+			</div>
+			<div id="eve5Modal" class="modal">
+				<div class="modal-content">
+					<span id="eve5Span"></span><img src="events/eve5.jpg">
+				</div>
+			</div>
+			<div id="eve6Modal" class="modal">
+				<div class="modal-content">
+					<span id="eve6Span"></span><img src="events/eve6.jpg">
+				</div>
+			</div>
+			<div id="eve7Modal" class="modal">
+				<div class="modal-content">
+					<span id="eve7Span"></span><img src="events/eve7.jpg">
+				</div>
+			</div>
+			<div id="ev81Modal" class="modal">
+				<div class="modal-content">
+					<span id="eve8Span"></span><img src="events/eve8.jpg">
+				</div>
+			</div>
+			<div id="eve9Modal" class="modal">
+				<div class="modal-content">
+					<span id="eve9Span"></span><img src="events/eve9.jpg">
+				</div>
+			</div>
+			<div id="eve10Modal" class="modal">
+				<div class="modal-content">
+					<span id="eve10Span"></span><img src="events/eve10.jpg">
+				</div>
+			</div>
+			<div id="eve11Modal" class="modal">
+				<div class="modal-content">
+					<span id="eve11Span"></span><img src="events/eve11.jpg">
+				</div>
+			</div>
+			<div id="eve12Modal" class="modal">
+				<div class="modal-content">
+					<span id="eve12Span"></span><img src="events/eve12.jpg">
+				</div>
+			</div>
+		</div>
+
+
+		<div class="landModals" align="center">
+			<div id="ed1Modal" class="modal">
+				<div class="modal-content">
+					<span id="ed1Span"></span><img src="everyday/ed1.jpg">
+				</div>
+			</div>
+			<div id="ed2Modal" class="modal">
+				<div class="modal-content">
+					<span id="ed2Span"></span><img src="everyday/ed2.jpg">
+				</div>
+			</div>
+			<div id="ed3Modal" class="modal">
+				<div class="modal-content">
+					<span id="ed3Span"></span><img src="everyday/ed3.jpg">
+				</div>
+			</div>
+			<div id="ed4Modal" class="modal">
+				<div class="modal-content">
+					<span id="ed4Span"></span><img src="everyday/ed4.jpg">
+				</div>
+			</div>
+			<div id="ed5Modal" class="modal">
+				<div class="modal-content">
+					<span id="ed5Span"></span><img src="everyday/ed5.jpg">
+				</div>
+			</div>
+			<div id="ed6Modal" class="modal">
+				<div class="modal-content">
+					<span id="ed6Span"></span><img src="everyday/ed6.jpg">
+				</div>
+			</div>
+			<div id="ed7Modal" class="modal">
+				<div class="modal-content">
+					<span id="ed7Span"></span><img src="everyday/ed7.jpg">
+				</div>
+			</div>
+			<div id="ed8Modal" class="modal">
+				<div class="modal-content">
+					<span id="ed8Span"></span><img src="everyday/ed8.jpg">
+				</div>
+			</div>
+			<div id="ed9Modal" class="modal">
+				<div class="modal-content">
+					<span id="ed9Span"></span><img src="everyday/ed9.jpg">
+				</div>
+			</div>
+		</div>
 	</section>
 
 	 <!-- <audio loop autoplay> -->
@@ -275,7 +388,7 @@
 	 <!-- </audio> -->
 	 		<!-- footer -->
 	 <footer>
-	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 12:17<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
+	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 12:44<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
 	 	</p>
 	 </footer>
 </body>
