--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 					<span id="eve7Span"></span><img src="events/eve7.jpg">
 				</div>
 			</div>
-			<div id="ev8Modal" class="modal">
+			<div id="eve8Modal" class="modal">
 				<div class="modal-content">
 					<span id="eve8Span"></span><img src="events/eve8.jpg">
 				</div>
@@ -388,7 +388,7 @@
 	 <!-- </audio> -->
 	 		<!-- footer -->
 	 <footer>
-	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 1:04<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
+	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 11:43<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
 	 	</p>
 	 </footer>
 </body>
