--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 		<div>
 			<p class="quote2">"Photography takes an instant out of time by holding it still"</p>
-			<a href="https://en.wikipedia.org/wiki/Dorothea_Lange" class="quote2Author">- <u>Dorothea Lange</u></a>
+			<button><a href="https://en.wikipedia.org/wiki/Dorothea_Lange" class="quote2Author">Dorothea Lange</a></button>
 		</div>
 
 		<div class="contentSection">
@@ -388,7 +388,7 @@
 	 <!-- </audio> -->
 	 		<!-- footer -->
 	 <footer>
-	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 11:43<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
+	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 1:00<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
 	 	</p>
 	 </footer>
 </body>
