--- a/index.html
+++ b/index.html
@@ -79,24 +79,24 @@
 		</div>
 
 		<div class="buttonHeader">
-			<button id="btn1" class="button" onclick="focus1();refreshContent('Landscape','Architecture','Events','Everyday')">Landscape</a></button>
+			<button id="btn1" class="button" onclick="focus1();refreshContent('Landscape','Architecture','Events','Everyday')">Landscape</button>
 
 			<span class="bar">|</span>
 
-			<button id="btn2" class="button" onclick="focus2();refreshContent('Architecture','Landscape','Events','Everyday')">Architecture</a></button>
+			<button id="btn2" class="button" onclick="focus2();refreshContent('Architecture','Landscape','Events','Everyday')">Architecture</button>
 			
 			<span class="bar">|</span>
 
-			<button id="btn3" class="button" onclick="focus3();refreshContent('Events','Landscape','Architecture','Everyday')">Events</a></button>
+			<button id="btn3" class="button" onclick="focus3();refreshContent('Events','Landscape','Architecture','Everyday')">Events</button>
 
 			<span class="bar">|</span>
 
-			<button id="btn4" class="button" onclick="focus4();refreshContent('Everyday','Landscape','Architecture','Events')">Everyday</a></button>
+			<button id="btn4" class="button" onclick="focus4();refreshContent('Everyday','Landscape','Architecture','Events')">Everyday</button>
 		</div>
 
 		<div>
 			<p class="quote2">"Photography takes an instant out of time by holding it still"</p>
-			<button class="lange"><a href="https://en.wikipedia.org/wiki/Dorothea_Lange" class="quote2Author">Dorothea Lange</a></button>
+			<button class="button"><a href="https://en.wikipedia.org/wiki/Dorothea_Lange" class="quote2Author">Dorothea Lange</a></button>
 		</div>
 
 		<div class="contentSection">
@@ -386,7 +386,7 @@
 	 <!-- </audio> -->
 	 		<!-- footer -->
 	 <footer>
-	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 2:35<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
+	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 2:41<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
 	 	</p>
 	 </footer>
 </body>
