--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 		<div>
 			<p class="quote2">"Photography takes an instant out of time by holding it still"</p>
-			<button class="button"><a href="https://en.wikipedia.org/wiki/Dorothea_Lange" class="quote2Author">Dorothea Lange</a></button>
+			<button class="button"><a href="https://en.wikipedia.org/wiki/Dorothea_Lange">Dorothea Lange</a></button>
 		</div>
 
 		<div class="contentSection">
@@ -386,7 +386,7 @@
 	 <!-- </audio> -->
 	 		<!-- footer -->
 	 <footer>
-	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 2:41<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
+	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 2:44<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
 	 	</p>
 	 </footer>
 </body>
