--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
 		</div>
 
 		<div class="buttonHeader">
-			<button id="btn1" class="button" onclick="focus1();refreshContent('Landscape','Architecture','Events','Everyday')">Landscape</button>
+			<button id="btn1" class="catButton" onclick="focus1();refreshContent('Landscape','Architecture','Events','Everyday')">Landscape</button>
 
 			<span class="bar">|</span>
 
-			<button id="btn2" class="button" onclick="focus2();refreshContent('Architecture','Landscape','Events','Everyday')">Architecture</button>
+			<button id="btn2" class="catButton" onclick="focus2();refreshContent('Architecture','Landscape','Events','Everyday')">Architecture</button>
 			
 			<span class="bar">|</span>
 
-			<button id="btn3" class="button" onclick="focus3();refreshContent('Events','Landscape','Architecture','Everyday')">Events</button>
+			<button id="btn3" class="catButton" onclick="focus3();refreshContent('Events','Landscape','Architecture','Everyday')">Events</button>
 
 			<span class="bar">|</span>
 
-			<button id="btn4" class="button" onclick="focus4();refreshContent('Everyday','Landscape','Architecture','Events')">Everyday</button>
+			<button id="btn4" class="catButton" onclick="focus4();refreshContent('Everyday','Landscape','Architecture','Events')">Everyday</button>
 		</div>
 
 		<div>
@@ -386,7 +386,7 @@
 	 <!-- </audio> -->
 	 		<!-- footer -->
 	 <footer>
-	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 4:54<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
+	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 4:58<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
 	 	</p>
 	 </footer>
 </body>
