--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<div>&nbsp</div>
 
 					<p>
-						If you ever want to&nbsp<img src="camera.png" width="30" height="25"> or <img src="basketball.png" width="30" height="25">, you can reach me at the social media links below.
+						If you ever want to&nbsp<img src="camera.png" width="30" height="25"> together or need a couple photos yourself, you can reach me at the social media links below.
 					</p>
 				</div>
 			</div>
@@ -386,7 +386,7 @@
 	 <!-- </audio> -->
 	 		<!-- footer -->
 	 <footer>
-	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 5:51<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
+	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
 	 	</p>
 	 </footer>
 </body>
