--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
 		</div>
 
 		<div align="center">
-			<div id="snapChatModal" class="modal">
+			<div id="snapChatModal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="snapChatSpan"></span>
 					<p>SnapChat Username: andrewzee6</p>
-					<img src="snapChatQR.png" style="border-radius: 8%">
+					<img src="snapChatQR.png" style="border-radius: 8%"  onclick="document.getElementById('snapChatModal').style.display='block'">
 				</div>
 			</div>
 
-			<div id="weChatModal" class="modal">
+			<div id="weChatModal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="weChatSpan"></span>
 					<p>WeChat ID: drewzhen</p>
-					<img src="weChatQR.png" style="border-radius: 4%; width: 525px; height: 525px">
+					<img src="weChatQR.png" style="border-radius: 4%; width: 525px; height: 525px"  onclick="document.getElementById('weChatModal').style.display='block'">
 				</div>
 			</div>
 		</div>
@@ -100,56 +100,56 @@
 		<div class="contentSection">
 			<div id="Landscape" class="imageStyle">
 				<img id="land1" src="landscape/land1.jpg" onclick="document.getElementById('land1Modal').style.display='block'">
-				<img id="land2" src="landscape/land2.jpg">
-				<img id="land3" src="landscape/land3.jpg">
-				<img id="land4" src="landscape/land4.jpg">
-				<img id="land5" src="landscape/land5.jpg">
-				<img id="land6" src="landscape/land6.jpg">
-				<img id="land7" src="landscape/land7.jpg">
-				<img id="land8" src="landscape/land8.jpg">
-				<img id="land9" src="landscape/land9.jpg">
+				<img id="land2" src="landscape/land2.jpg" onclick="document.getElementById('land2Modal').style.display='block'">
+				<img id="land3" src="landscape/land3.jpg" onclick="document.getElementById('land3Modal').style.display='block'">
+				<img id="land4" src="landscape/land4.jpg" onclick="document.getElementById('land4Modal').style.display='block'">
+				<img id="land5" src="landscape/land5.jpg" onclick="document.getElementById('land5Modal').style.display='block'">
+				<img id="land6" src="landscape/land6.jpg" onclick="document.getElementById('land6Modal').style.display='block'">
+				<img id="land7" src="landscape/land7.jpg" onclick="document.getElementById('land7Modal').style.display='block'">
+				<img id="land8" src="landscape/land8.jpg" onclick="document.getElementById('land8Modal').style.display='block'">
+				<img id="land9" src="landscape/land9.jpg" onclick="document.getElementById('land9Modal').style.display='block'">
 			</div>
 
 			<div id="Architecture" class="imageStyle">
-				<img id="arch1" src="architecture/arch1.jpg">
-				<img id="arch2"  src="architecture/arch2.jpg">
-				<img id="arch3"  src="architecture/arch3.jpg">
-				<img id="arch4"  src="architecture/arch4.jpg">
-				<img id="arch5"  src="architecture/arch5.jpg">
-				<img id="arch6"  src="architecture/arch6.jpg">
-				<img id="arch7"  src="architecture/arch7.jpg">
-				<img id="arch8"  src="architecture/arch8.jpg">
-				<img id="arch9"  src="architecture/arch9.jpg">
-				<img id="arch10"  src="architecture/arch10.jpg">
-				<img id="arch11"  src="architecture/arch11.jpg">
-				<img id="arch12"  src="architecture/arch12.jpg">
+				<img id="arch1" src="architecture/arch1.jpg" onclick="document.getElementById('arch1Modal').style.display='block'">
+				<img id="arch2"  src="architecture/arch2.jpg" onclick="document.getElementById('arch2Modal').style.display='block'">
+				<img id="arch3"  src="architecture/arch3.jpg" onclick="document.getElementById('arch3Modal').style.display='block'">
+				<img id="arch4"  src="architecture/arch4.jpg" onclick="document.getElementById('arch4Modal').style.display='block'">
+				<img id="arch5"  src="architecture/arch5.jpg" onclick="document.getElementById('arch5Modal').style.display='block'">
+				<img id="arch6"  src="architecture/arch6.jpg" onclick="document.getElementById('arch6Modal').style.display='block'">
+				<img id="arch7"  src="architecture/arch7.jpg" onclick="document.getElementById('arch7Modal').style.display='block'">
+				<img id="arch8"  src="architecture/arch8.jpg" onclick="document.getElementById('arch8Modal').style.display='block'">
+				<img id="arch9"  src="architecture/arch9.jpg" onclick="document.getElementById('arch9Modal').style.display='block'">
+				<img id="arch10"  src="architecture/arch10.jpg" onclick="document.getElementById('arch10Modal').style.display='block'">
+				<img id="arch11"  src="architecture/arch11.jpg" onclick="document.getElementById('arch11Modal').style.display='block'">
+				<img id="arch12"  src="architecture/arch12.jpg" onclick="document.getElementById('arch12Modal').style.display='block'">
 			</div>
 
 			<div id="Events" class="imageStyle">
-				<img id="eve1" src="events/eve1.jpg">
-				<img id="eve2" src="events/eve2.jpg">
-				<img id="eve3" src="events/eve3.jpg">
-				<img id="eve4" src="events/eve4.jpg">
-				<img id="eve5" src="events/eve5.jpg">
-				<img id="eve6" src="events/eve6.jpg">
-				<img id="eve7" src="events/eve7.jpg">
-				<img id="eve8" src="events/eve8.jpg">
-				<img id="eve9" src="events/eve9.jpg">
-				<img id="eve10" src="events/eve10.jpg">
-				<img id="eve11" src="events/eve11.jpg">
-				<img id="eve12" src="events/eve12.jpg">
+				<img id="eve1" src="events/eve1.jpg" onclick="document.getElementById('eve1Modal').style.display='block'">
+				<img id="eve2" src="events/eve2.jpg" onclick="document.getElementById('eve2Modal').style.display='block'">
+				<img id="eve3" src="events/eve3.jpg" onclick="document.getElementById('eve3Modal').style.display='block'">
+				<img id="eve4" src="events/eve4.jpg" onclick="document.getElementById('eve4Modal').style.display='block'">
+				<img id="eve5" src="events/eve5.jpg" onclick="document.getElementById('eve5Modal').style.display='block'">
+				<img id="eve6" src="events/eve6.jpg" onclick="document.getElementById('eve6Modal').style.display='block'">
+				<img id="eve7" src="events/eve7.jpg" onclick="document.getElementById('eve7Modal').style.display='block'">
+				<img id="eve8" src="events/eve8.jpg" onclick="document.getElementById('eve8Modal').style.display='block'">
+				<img id="eve9" src="events/eve9.jpg" onclick="document.getElementById('eve9Modal').style.display='block'">
+				<img id="eve10" src="events/eve10.jpg" onclick="document.getElementById('eve10Modal').style.display='block'">
+				<img id="eve11" src="events/eve11.jpg" onclick="document.getElementById('eve11Modal').style.display='block'">
+				<img id="eve12" src="events/eve12.jpg" onclick="document.getElementById('eve12Modal').style.display='block'">
 			</div>
 
 			<div id="Everyday" class="imageStyle">
-				<img id="ed1" src="everyday/ed1.jpg">
-				<img id="ed2" src="everyday/ed2.jpg">
-				<img id="ed3" src="everyday/ed3.jpg">
-				<img id="ed4" src="everyday/ed4.jpg">
-				<img id="ed5" src="everyday/ed5.jpg">
-				<img id="ed6" src="everyday/ed6.jpg">
-				<img id="ed7" src="everyday/ed7.jpg">
-				<img id="ed8" src="everyday/ed8.jpg">
-				<img id="ed9" src="everyday/ed9.jpg">
+				<img id="ed1" src="everyday/ed1.jpg" onclick="document.getElementById('ed1Modal').style.display='block'">
+				<img id="ed2" src="everyday/ed2.jpg" onclick="document.getElementById('ed2Modal').style.display='block'">
+				<img id="ed3" src="everyday/ed3.jpg" onclick="document.getElementById('ed3Modal').style.display='block'">
+				<img id="ed4" src="everyday/ed4.jpg" onclick="document.getElementById('ed4Modal').style.display='block'">
+				<img id="ed5" src="everyday/ed5.jpg" onclick="document.getElementById('ed5Modal').style.display='block'">
+				<img id="ed6" src="everyday/ed6.jpg" onclick="document.getElementById('ed6Modal').style.display='block'">
+				<img id="ed7" src="everyday/ed7.jpg" onclick="document.getElementById('ed7Modal').style.display='block'">
+				<img id="ed8" src="everyday/ed8.jpg" onclick="document.getElementById('ed8Modal').style.display='block'">
+				<img id="ed9" src="everyday/ed9.jpg" onclick="document.getElementById('ed9Modal').style.display='block'">
 			</div>
 		</div>
 
@@ -159,42 +159,42 @@
 					<span id="land1Span"></span><img src="landscape/land1.jpg">
 				</div>
 			</div>
-			<div id="land2Modal" class="modal">
+			<div id="land2Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="land2Span"></span><img src="landscape/land2.jpg">
 				</div>
 			</div>
-			<div id="land3Modal" class="modal">
+			<div id="land3Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="land3Span"></span><img src="landscape/land3.jpg">
 				</div>
 			</div>
-			<div id="land4Modal" class="modal">
+			<div id="land4Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="land4Span"></span><img src="landscape/land4.jpg">
 				</div>
 			</div>
-			<div id="land5Modal" class="modal">
+			<div id="land5Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="land5Span"></span><img src="landscape/land5.jpg">
 				</div>
 			</div>
-			<div id="land6Modal" class="modal">
+			<div id="land6Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="land6Span"></span><img src="landscape/land6.jpg">
 				</div>
 			</div>
-			<div id="land7Modal" class="modal">
+			<div id="land7Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="land7Span"></span><img src="landscape/land7.jpg">
 				</div>
 			</div>
-			<div id="land8Modal" class="modal">
+			<div id="land8Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="land8Span"></span><img src="landscape/land8.jpg">
 				</div>
 			</div>
-			<div id="land9Modal" class="modal">
+			<div id="land9Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="land9Span"></span><img src="landscape/land9.jpg">
 				</div>
@@ -202,63 +202,63 @@
 		</div>
 
 		<div class="landModals" align="center">
-			<div id="arch1Modal" class="modal">
+			<div id="arch1Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="arch1Span"></span><img src="architecture/arch1.jpg">
 				</div>
 			</div>
-			<div id="arch2Modal" class="modal">
+			<div id="arch2Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="arch2Span"></span><img src="architecture/arch2.jpg">
 				</div>
 			</div>
-			<div id="arch3Modal" class="modal">
+			<div id="arch3Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="arch3Span"></span><img src="architecture/arch3.jpg">
 				</div>
 			</div>
-			<div id="arch4Modal" class="modal">
+			<div id="arch4Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="arch4Span"></span><img src="architecture/arch4.jpg">
 				</div>
 			</div>
-			<div id="arch5Modal" class="modal">
+			<div id="arch5Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="arch5Span"></span><img src="architecture/arch5.jpg">
 				</div>
 			</div>
-			<div id="arch6Modal" class="modal">
+			<div id="arch6Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="arch6Span"></span><img src="architecture/arch6.jpg">
 				</div>
 			</div>
-			<div id="arch7Modal" class="modal">
+			<div id="arch7Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="arch7Span"></span><img src="architecture/arch7.jpg">
 				</div>
 			</div>
-			<div id="arch8Modal" class="modal">
+			<div id="arch8Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="arch8Span"></span><img src="architecture/arch8.jpg">
 				</div>
 			</div>
 
-			<div id="arch9Modal" class="modal">
+			<div id="arch9Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="arch9Span"></span><img src="architecture/arch9.jpg">
 				</div>
 			</div>
-			<div id="arch10Modal" class="modal">
+			<div id="arch10Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="arch10Span"></span><img src="architecture/arch10.jpg">
 				</div>
 			</div>
-			<div id="arch11Modal" class="modal">
+			<div id="arch11Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="arch11Span"></span><img src="architecture/arch11.jpg">
 				</div>
 			</div>
-			<div id="arch12Modal" class="modal">
+			<div id="arch12Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="arch12Span"></span><img src="architecture/arch12.jpg">
 				</div>
@@ -267,62 +267,62 @@
 
 
 		<div class="landModals" align="center">
-			<div id="eve1Modal" class="modal">
+			<div id="eve1Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="eve1Span"></span><img src="events/eve1.jpg">
 				</div>
 			</div>
-			<div id="eve2Modal" class="modal">
+			<div id="eve2Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="eve2Span"></span><img src="events/eve2.jpg">
 				</div>
 			</div>
-			<div id="eve3Modal" class="modal">
+			<div id="eve3Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="eve3Span"></span><img src="events/eve3.jpg">
 				</div>
 			</div>
-			<div id="eve4Modal" class="modal">
+			<div id="eve4Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="eve4Span"></span><img src="events/eve4.jpg">
 				</div>
 			</div>
-			<div id="eve5Modal" class="modal">
+			<div id="eve5Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="eve5Span"></span><img src="events/eve5.jpg">
 				</div>
 			</div>
-			<div id="eve6Modal" class="modal">
+			<div id="eve6Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="eve6Span"></span><img src="events/eve6.jpg">
 				</div>
 			</div>
-			<div id="eve7Modal" class="modal">
+			<div id="eve7Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="eve7Span"></span><img src="events/eve7.jpg">
 				</div>
 			</div>
-			<div id="eve8Modal" class="modal">
+			<div id="eve8Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="eve8Span"></span><img src="events/eve8.jpg">
 				</div>
 			</div>
-			<div id="eve9Modal" class="modal">
+			<div id="eve9Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="eve9Span"></span><img src="events/eve9.jpg">
 				</div>
 			</div>
-			<div id="eve10Modal" class="modal">
+			<div id="eve10Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="eve10Span"></span><img src="events/eve10.jpg">
 				</div>
 			</div>
-			<div id="eve11Modal" class="modal">
+			<div id="eve11Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="eve11Span"></span><img src="events/eve11.jpg">
 				</div>
 			</div>
-			<div id="eve12Modal" class="modal">
+			<div id="eve12Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="eve12Span"></span><img src="events/eve12.jpg">
 				</div>
@@ -331,47 +331,47 @@
 
 
 		<div class="landModals" align="center">
-			<div id="ed1Modal" class="modal">
+			<div id="ed1Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="ed1Span"></span><img src="everyday/ed1.jpg">
 				</div>
 			</div>
-			<div id="ed2Modal" class="modal">
+			<div id="ed2Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="ed2Span"></span><img src="everyday/ed2.jpg">
 				</div>
 			</div>
-			<div id="ed3Modal" class="modal">
+			<div id="ed3Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="ed3Span"></span><img src="everyday/ed3.jpg">
 				</div>
 			</div>
-			<div id="ed4Modal" class="modal">
+			<div id="ed4Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="ed4Span"></span><img src="everyday/ed4.jpg">
 				</div>
 			</div>
-			<div id="ed5Modal" class="modal">
+			<div id="ed5Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="ed5Span"></span><img src="everyday/ed5.jpg">
 				</div>
 			</div>
-			<div id="ed6Modal" class="modal">
+			<div id="ed6Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="ed6Span"></span><img src="everyday/ed6.jpg">
 				</div>
 			</div>
-			<div id="ed7Modal" class="modal">
+			<div id="ed7Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="ed7Span"></span><img src="everyday/ed7.jpg">
 				</div>
 			</div>
-			<div id="ed8Modal" class="modal">
+			<div id="ed8Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="ed8Span"></span><img src="everyday/ed8.jpg">
 				</div>
 			</div>
-			<div id="ed9Modal" class="modal">
+			<div id="ed9Modal" class="modal" onclick="this.style.display='none'">
 				<div class="modal-content">
 					<span id="ed9Span"></span><img src="everyday/ed9.jpg">
 				</div>
