--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 		</div>
 
 		<div class="socialMedia">
-				<a href="https://www.facebook.com/zhen.andrew" class="fa fa-facebook"></a>
-				<a href="https://www.instagram.com/a.jzhen/" class="fa fa-instagram"></a>
+				<a href="https://www.facebook.com/zhen.andrew" class="fa fa-facebook" target="_blank"></a>
+				<a href="https://www.instagram.com/a.jzhen/" class="fa fa-instagram" target="_blank"></a>
 				<a style="cursor: pointer" id="snapChat" class="fa fa-snapchat-ghost"></a>
 				<a style="cursor: pointer" id="weChat" class="fa fa-wechat"></a>
 		</div>
@@ -96,6 +96,11 @@
 			<p class="quote2">"Photography takes an instant out of time by holding it still"</p>
 			<button class="lange"><a href="https://en.wikipedia.org/wiki/Dorothea_Lange">Dorothea Lange</a></button>
 		</div>
+
+		<br>
+		<br>
+		<br>
+		<div style="font-size: 25; font-weight: bold; font-family: 'Raleway'">Edit 2017-10-19: New images coming soon</div>
 
 		<div class="contentSection">
 			<div id="Landscape" class="imageStyle">
