--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<h1>ANDREW ZHEN</h1>
 
 				<div class="quote1">
-					<p>" WHAT YOU THINK, YOU BECOME &nbsp&nbsp WHAT YOU FEEL, YOU ATTRACT &nbsp&nbsp WHAT YOU IMAGINE, YOU CREATE "</p>
+					<p>Photography</p>
 				</div>
 			</div>
 	</section>
