--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
 	<section class="background_picture">
 			<div class="intro">
 				<h1>ANDREW ZHEN</h1>
-
-				<div class="quote1">
-					<p>Photography</p>
-				</div>
 			</div>
 	</section>
 
@@ -24,7 +20,6 @@
 	<section style="text-align: center">
 		<div class="about">
 			<h1>About</h1>
-			<p>甄家豪</p>
 		</div>
 
 		<div class="table">
@@ -77,24 +72,19 @@
 		</div>
 
 		<div class="buttonHeader">
-			<button id="btn1" class="catButton" onclick="focus1();refreshContent('Landscape','Architecture','Events','Everyday')">Landscape</button>
+			<button id="btn1" class="catButton" onclick="focus1();refreshContent('Landscape','Architecture','Events','Everyday')">landscape</button>
 
 			<span class="bar">|</span>
 
-			<button id="btn2" class="catButton" onclick="focus2();refreshContent('Architecture','Landscape','Events','Everyday')">Architecture</button>
+			<button id="btn2" class="catButton" onclick="focus2();refreshContent('Architecture','Landscape','Events','Everyday')">architecture</button>
 			
 			<span class="bar">|</span>
 
-			<button id="btn3" class="catButton" onclick="focus3();refreshContent('Events','Landscape','Architecture','Everyday')">Events</button>
+			<button id="btn3" class="catButton" onclick="focus3();refreshContent('Events','Landscape','Architecture','Everyday')">events</button>
 
 			<span class="bar">|</span>
 
-			<button id="btn4" class="catButton" onclick="focus4();refreshContent('Everyday','Landscape','Architecture','Events')">Everyday</button>
-		</div>
-
-		<div>
-			<p class="quote2">"Photography takes an instant out of time by holding it still"</p>
-			<button class="lange"><a href="https://en.wikipedia.org/wiki/Dorothea_Lange">Dorothea Lange</a></button>
+			<button id="btn4" class="catButton" onclick="focus4();refreshContent('Everyday','Landscape','Architecture','Events')">everyday</button>
 		</div>
 
 		<br>
